# easy-whisper

./: .gitignore  LICENSE  pyproject.toml
src/easy_whisper/: __init__.py  data_loader.py  data_loader_hf.py  hf_login.py  main.py  trainer.py
