[project]
name = "easy-whisper"
version = "0.0.1"
description = "Easy to use wrapper for fine tuning whisper models using for any multilingual ASR dataset using Huggingface transformers."
readme = "README.md"
authors = [
    { name = "Brian Weigand", email = "brian@triad-dev.com" },
    { name = "Jonathan Zero", email = "jonathan@triad-dev.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.4.0",
    "datasets[audio]>=3.3.2",
    "evaluate>=0.4.3",
    "gradio>=5.18.0",
    "jiwer>=3.1.0",
    "openai-whisper",
    "tensorboard>=2.19.0",
    "transformers>=4.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
