[project]
name = "easy-whisper"
version = "0.0.1"
description = "Easy to use wrapper for fine tuning whisper models using for any multilingual ASR dataset using Huggingface transformers."
readme = "README.md"
authors = [
    { name = "Brian Weigand", email = "brian@triad-dev.com" },
    { name = "Jonathan Zero", email = "jonathan@triad-dev.com" }
]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.4.0",
    "bitsandbytes>=0.45.3",
    "datasets[audio]>=3.3.2",
    "evaluate>=0.4.3",
    "gradio>=5.18.0",
    "jiwer>=3.1.0",
    "librosa>=0.10.2.post1",
    "loralib>=0.1.2",
    "openai-whisper",
    "peft>=0.14.0",
    "ruff>=0.9.7",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "transformers>=4.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"