[project]
name = "easy-whisper"
version = "0.0.1-alpha.1"
description = "Easy to use wrapper for fine tuning whisper models using PEFT-LoRA + BNB INT-8 for any multilingual ASR dataset using Huggingface transformers."
readme = "README.md"
authors = [
    { name = "Brian Weigand", email = "brian@triad-dev.com" },
    { name = "Jonathan Zero", email = "jonathan@triad-dev.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.4",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate>=1.4.0",
    "bitsandbytes>=0.45.3",
    "datasets[audio]>=3.3.2",
    "evaluate>=0.4.3",
    "gradio>=5.18.0",
    "jiwer>=3.1.0",
    "librosa>=0.10.2.post1",
    "loralib>=0.1.2",
    "openai-whisper",
    "peft>=0.14.0",
    "ruff>=0.9.7",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "transformers>=4.49.0",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/triad-development/easy-whisper"
Issues = "https://github.com/triad-development/easy-whisper/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }

[tool.ruff]
target-version = "py313"

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"